# ConvexityConstraint

./: .gitignore  ConvexityConstraint.yaml  FilePSG_binary_dir.txt  Readme.md  common.cmake  vis.py  vis.sh
Meissner/: CMakeLists.txt  Meissner_2_Test.cpp  Meissner_3_Test.cpp  Minkowski_2_Test.cpp  Minkowski_3_Test.cpp
Meissner/Data/: HalfPts_10.txt  HalfPts_2.txt  HalfPts_3.txt  HalfPts_4.txt  HalfPts_5.txt  HalfPts_6.txt  HalfPts_7.txt  HalfPts_8.txt  HalfPts_9.txt
Meissner/Headers/: ConstraintsProduct.h  Meissner_2.hxx  Minkowski_3.hxx  QuotientedNewton.h
Meissner/Visualisation/: CommonInitialization.nb  HalfPts.nb  Meissner_2.nb  Meissner_3.nb
Minkowski/: CMakeLists.txt  ConstraintsProduct.h  Meissner_2.h  Meissner_2.hxx  Meissner_2_Test.cpp  Meissner_2_Test.h  Meissner_3_Test.cpp  Meissner_3_Test.h  Minkowski_2.h  Minkowski_2.hxx  Minkowski_2_Test.h  Minkowski_3.h  Minkowski_3.hxx  Minkowski_3_Test.cpp  Minkowski_3_Test.h  QuotientedNewton.h  main.cpp
Minkowski/Headers/: Meissner_2.h  Meissner_3.h  Meissner_3.hxx  Minkowski_2.h  Minkowski_2.hxx  Minkowski_3.h  Minkowski_3.hxx  QuotientedNewton.hxx
Monopolist/: CMakeLists.txt  Constraint.h  Constraint.hxx  ConvexityConstraint.h  ConvexityConstraint.hxx  ConvexityConstraint_3.h  ConvexityConstraint_3.hxx  ConvexityConstraint_Test.hxx  DGO_CallTest.h  DGO_Test.h  DGO_Traits.h  Geometry_2.h  Geometry_2.hxx  Geometry_3.h  Geometry_3.hxx  LipschitzConstraint.h  Monopolist_2_NLOpt.cpp  Monopolist_2_Test.cpp  Monopolist_3_Test.cpp  NewtonSolvers.h  NewtonSolvers.hxx  NewtonSolvers_Test.h  PrincipalAgent.h  PrincipalAgent.hxx  PrincipalAgent_3.h  PrincipalAgent_3.hxx  PrincipalAgent_3_Test.h  PrincipalAgent_NLOpt.h  PrincipalAgent_Test.h  Regular_Test.h  Voronoi_Test.h  main.cpp
Monopolist/Headers/: Constraint.h  Constraint.hxx  ConvexityConstraint_1.h  ConvexityConstraint_2.h  ConvexityConstraint_2.hxx  ConvexityConstraint_3.h  ConvexityConstraint_3.hxx  ElementaryConstraints.h  ElementaryConstraints.hxx  ElementaryShapes_2.h  ElementaryShapes_3.h  Geometry_2.h  Geometry_2.hxx  Geometry_3.h  Geometry_3.hxx  LipschitzConstraint_2.h  MainHelp.h  NewtonSolvers.h  NewtonSolvers.hxx  PrincipalAgent_2.h  PrincipalAgent_2.hxx  PrincipalAgent_3.h  PrincipalAgent_3.hxx
Monopolist/Minkowski/: MinkowskiConstraint_2.hxx  MinkowskiEnergy_2.h  Minkowski_2_Test.h  Minkowski_2_Traits.h  Minkowski_3_Test.h  Minkowski_3_Traits.h
Monopolist/Refinement/: Refinement_2_Traits.h
Monopolist/Visualization/: CommonInitialization.nb  Monopolist_2.nb
PythonSubgradients/: CMakelists.txt  FilePSG.cpp  PythonSubgradients.py  PythonSubgradients.yaml  Readme.md  Test_PythonSubgradients.py
PythonSubgradients/Headers/: Constraint.h  Constraint.hxx  ConvexityConstraint_1.h  ConvexityConstraint_2.h  ConvexityConstraint_2.hxx  ConvexityConstraint_3.h  ConvexityConstraint_3.hxx  DispatchAndRun.h  Geometry_2.h  Geometry_2.hxx  Geometry_3.h  Geometry_3.hxx
